--- a/src/schema/rules/files/raw/anat.yaml
+++ b/src/schema/rules/files/raw/anat.yaml
@@ -20,8 +20,7 @@ nonparametric:
   datatypes:
     - anat
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: optional
     acquisition: optional
     ceagent: optional
@@ -56,8 +55,7 @@ parametric:
   datatypes:
     - anat
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: optional
     acquisition: optional
     ceagent: optional
@@ -75,8 +73,7 @@ defacemask:
   datatypes:
     - anat
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: optional
     acquisition: optional
     ceagent: optional
@@ -96,8 +93,7 @@ multiecho:
   datatypes:
     - anat
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: optional
     acquisition: optional
     ceagent: optional
@@ -117,8 +113,7 @@ multiflip:
   datatypes:
     - anat
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: optional
     acquisition: optional
     ceagent: optional
@@ -139,8 +134,7 @@ multiinversion:
   datatypes:
     - anat
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: optional
     acquisition: optional
     ceagent: optional
@@ -160,8 +154,7 @@ mp2rage:
   datatypes:
     - anat
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: optional
     acquisition: optional
     ceagent: optional
@@ -184,8 +177,7 @@ vfamt:
   datatypes:
     - anat
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: optional
     acquisition: optional
     ceagent: optional
@@ -207,8 +199,7 @@ mtr:
   datatypes:
     - anat
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: optional
     acquisition: optional
     ceagent: optional
