--- a/src/schema/rules/files/raw/eeg.yaml
+++ b/src/schema/rules/files/raw/eeg.yaml
@@ -14,8 +14,7 @@ eeg:
   datatypes:
     - eeg
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: required
     acquisition: optional
     run: optional
