--- a/src/schema/rules/files/raw/beh.yaml
+++ b/src/schema/rules/files/raw/beh.yaml
@@ -9,8 +9,7 @@ noncontinuous:
   datatypes:
     - beh
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: required
     acquisition: optional
     run: optional
