--- a/src/schema/rules/files/raw/fmap.yaml
+++ b/src/schema/rules/files/raw/fmap.yaml
@@ -15,8 +15,7 @@ fieldmaps:
   datatypes:
     - fmap
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     acquisition: optional
     run: optional
     chunk: optional
@@ -52,8 +51,7 @@ pepolar_m0scan:
   datatypes:
     - fmap
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     acquisition: optional
     ceagent: optional
     direction: required
@@ -71,8 +69,7 @@ TB1DAM:
   datatypes:
     - fmap
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     acquisition: optional
     ceagent: optional
     reconstruction: optional
@@ -92,8 +89,7 @@ TB1EPI:
   datatypes:
     - fmap
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     acquisition: optional
     ceagent: optional
     reconstruction: optional
@@ -117,8 +113,7 @@ RFFieldMaps:
   datatypes:
     - fmap
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     acquisition: optional
     ceagent: optional
     reconstruction: optional
@@ -139,8 +134,7 @@ TB1SRGE:
   datatypes:
     - fmap
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     acquisition: optional
     ceagent: optional
     reconstruction: optional
@@ -162,8 +156,7 @@ parametric:
   datatypes:
     - fmap
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     acquisition: optional
     ceagent: optional
     reconstruction: optional
