--- a/src/schema/rules/files/raw/motion.yaml
+++ b/src/schema/rules/files/raw/motion.yaml
@@ -8,8 +8,7 @@ motion:
   datatypes:
     - motion
   entities:
-    subject: required
-    session: optional
+    $ref: meta.templates.raw.base.entities
     task: required
     tracksys: required
     acquisition: optional
