feat(schema): Move more imaging data into imaging.yaml

--- a/src/schema/rules/files/deriv/preprocessed_data.yaml
+++ b/src/schema/rules/files/deriv/preprocessed_data.yaml
@@ -1,81 +1,8 @@
 # This document implements the common derivatives specification,
 # generally adding space and description entities to most raw data.
 #
-# Imaging files are omitted when it is redundant with the rules in
-# imaging.yaml
+# Imaging files are generally omitted, due to redundancy with imaging.yaml
 ---
-anat_defacemask_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.anat.defacemask
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.anat.defacemask.entities
-
-anat_megre_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.anat.megre
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.anat.megre.entities
-
-anat_mese_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.anat.mese
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.anat.mese.entities
-
-anat_multiflip_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.anat.multiflip
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.anat.multiflip.entities
-
-anat_multiinversion_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.anat.multiinversion
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.anat.multiinversion.entities
-
-anat_mp2rage_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.anat.mp2rage
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.anat.mp2rage.entities
-
-anat_vfamt_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.anat.vfamt
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.anat.vfamt.entities
-
-anat_mtr_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.anat.mtr
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.anat.mtr.entities
-
 beh_noncontinuous_common:
   $ref:
     - meta.templates.deriv.base
@@ -166,78 +93,6 @@ eeg_eeg_common:
       - meta.templates.deriv.spatial.entities
       - rules.files.raw.eeg.eeg.entities
 
-fmap_fieldmaps_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.fmap.fieldmaps
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.fmap.fieldmaps.entities
-
-fmap_pepolar_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.fmap.pepolar
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.fmap.pepolar.entities
-
-fmap_pepolar_m0scan:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.fmap.pepolar_m0scan
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.fmap.pepolar.entities
-
-fmap_TB1DAM_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.fmap.TB1DAM
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.fmap.TB1DAM.entities
-
-fmap_TB1EPI_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.fmap.TB1EPI
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.fmap.TB1EPI.entities
-
-fmap_RFFieldMaps_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.fmap.RFFieldMaps
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.fmap.RFFieldMaps.entities
-
-fmap_TB1SRGE_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.fmap.TB1SRGE
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.fmap.TB1SRGE.entities
-
-fmap_parametric_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.fmap.parametric
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.fmap.parametric.entities
-
 ieeg_ieeg_common:
   $ref:
     - meta.templates.deriv.spatial
@@ -300,24 +155,6 @@ micr_microscopy_common:
     $ref:
       - meta.templates.deriv.spatial.entities
       - rules.files.raw.micr.microscopy.entities
-
-perf_asl_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.perf.asl
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.perf.asl.entities
-
-pet_pet_common:
-  $ref:
-    - meta.templates.deriv.spatial
-    - rules.files.raw.pet.pet
-  entities:
-    $ref:
-      - meta.templates.deriv.spatial.entities
-      - rules.files.raw.pet.pet.entities
 
 pet_blood_common:
   $ref:
