--- a/src/schema/rules/files/deriv/imaging.yaml
+++ b/src/schema/rules/files/deriv/imaging.yaml
@@ -221,20 +221,13 @@ pet_pet_volumetric:
       - rules.files.raw.pet.pet.entities
 
 # Masks
-anat_parametric_mask:
-  $ref:
-    - meta.templates.deriv.mask
-    - rules.files.raw.anat.parametric
-  entities:
-    $ref:
-      - meta.templates.deriv.mask.entities
-      - rules.files.raw.anat.parametric.entities
-
-anat_nonparametric_mask:
+anat_mask:
   $ref:
     - meta.templates.deriv.mask
     - rules.files.raw.anat.nonparametric
   entities:
+    # The nonparametric entities are a superset of parametric entities,
+    # so no need to duplicate.
     $ref:
       - meta.templates.deriv.mask.entities
       - rules.files.raw.anat.nonparametric.entities
@@ -258,20 +251,12 @@ func_mask:
       - rules.files.raw.func.func.entities
 
 # Discrete and probabilistic segmentations
-anat_parametric_discrete_segmentation:
-  $ref:
-    - meta.templates.deriv.dseg
-    - rules.files.raw.anat.parametric
-  entities:
-    $ref:
-      - meta.templates.deriv.dseg.entities
-      - rules.files.raw.anat.parametric.entities
-
-anat_nonparametric_discrete_segmentation:
+anat_discrete_segmentation:
   $ref:
     - meta.templates.deriv.dseg
     - rules.files.raw.anat.nonparametric
   entities:
+    # ibid
     $ref:
       - meta.templates.deriv.dseg.entities
       - rules.files.raw.anat.nonparametric.entities
@@ -294,20 +279,12 @@ dwi_discrete_segmentation:
       - meta.templates.deriv.dseg.entities
       - rules.files.raw.dwi.dwi.entities
 
-anat_parametric_probabilistic_segmentation:
-  $ref:
-    - meta.templates.deriv.probseg
-    - rules.files.raw.anat.parametric
-  entities:
-    $ref:
-      - meta.templates.deriv.probseg.entities
-      - rules.files.raw.anat.parametric.entities
-
-anat_nonparametric_probabilistic_segmentation:
+anat_probabilistic_segmentation:
   $ref:
     - meta.templates.deriv.probseg
     - rules.files.raw.anat.nonparametric
   entities:
+    # ibid
     $ref:
       - meta.templates.deriv.probseg.entities
       - rules.files.raw.anat.nonparametric.entities
@@ -330,11 +307,12 @@ dwi_probabilistic_segmentation:
       - meta.templates.deriv.probseg.entities
       - rules.files.raw.dwi.dwi.entities
 
-anat_parametric_discrete_surface:
+anat_discrete_surface:
   $ref:
     - meta.templates.deriv.dseg_surface
-    - rules.files.raw.anat.parametric
+    - rules.files.raw.anat.nonparametric
   entities:
+    # ibid
     $ref:
       - meta.templates.deriv.dseg_surface.entities
-      - rules.files.raw.anat.parametric.entities
+      - rules.files.raw.anat.nonparametric.entities
