--- a/src/schema/rules/dataset_metadata.yaml
+++ b/src/schema/rules/dataset_metadata.yaml
@@ -16,8 +16,7 @@ dataset_description:
     EthicsApprovals: optional
     ReferencesAndLinks: optional
     DatasetDOI: optional
-    GeneratedBy: deprecated
-    GeneratedByProv: recommended
+    GeneratedBy: recommended
     SourceDatasets: recommended
 
 dataset_authors:
@@ -39,8 +38,7 @@ derivative_description:
     - path == "/dataset_description.json"
     - json.DatasetType == "derivative"
   fields:
-    GeneratedByProv: recommended
-    GeneratedBy: deprecated
+    GeneratedBy: required
 
 dataset_description_with_genetics:
   selectors:
