--- a/src/schema/rules/files/raw/anat.yaml
+++ b/src/schema/rules/files/raw/anat.yaml
@@ -20,15 +20,10 @@ nonparametric:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
-    run: optional
     echo: optional
     part: optional
-    chunk: optional
 
 parametric:
   suffixes:
@@ -55,13 +50,8 @@ parametric:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
-    run: optional
-    chunk: optional
 
 defacemask:
   suffixes:
@@ -73,14 +63,9 @@ defacemask:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
-    run: optional
     modality: optional
-    chunk: optional
 
 megre:
   suffixes:
@@ -92,15 +77,10 @@ megre:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
-    run: optional
     echo: required
     part: optional
-    chunk: optional
 
 mese:
   suffixes:
@@ -112,16 +92,11 @@ mese:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
     direction: optional
-    run: optional
     echo: required
     part: optional
-    chunk: optional
 
 multiflip:
   suffixes:
@@ -133,16 +108,11 @@ multiflip:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
-    run: optional
     echo: optional
     flip: required
     part: optional
-    chunk: optional
 
 multiinversion:
   suffixes:
@@ -154,15 +124,10 @@ multiinversion:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
-    run: optional
     inversion: required
     part: optional
-    chunk: optional
 
 mp2rage:
   suffixes:
@@ -174,17 +139,12 @@ mp2rage:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
-    run: optional
     echo: optional
     flip: optional
     inversion: required
     part: optional
-    chunk: optional
 
 vfamt:
   suffixes:
@@ -197,17 +157,12 @@ vfamt:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
-    run: optional
     echo: optional
     flip: required
     mtransfer: required
     part: optional
-    chunk: optional
 
 mtr:
   suffixes:
@@ -219,12 +174,7 @@ mtr:
   datatypes:
     - anat
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.mri.entities
     task: optional
-    acquisition: optional
-    ceagent: optional
-    reconstruction: optional
-    run: optional
     mtransfer: required
     part: optional
-    chunk: optional
