--- a/src/schema/rules/files/raw/beh.yaml
+++ b/src/schema/rules/files/raw/beh.yaml
@@ -1,6 +1,7 @@
 ---
 # Non-continuous data
 noncontinuous:
+  $ref: meta.templates.raw.task
   suffixes:
     - beh
   extensions:
@@ -8,8 +9,3 @@ noncontinuous:
     - .json
   datatypes:
     - beh
-  entities:
-    $ref: meta.templates.raw.base.entities
-    task: required
-    acquisition: optional
-    run: optional
