--- a/src/schema/rules/files/raw/channels.yaml
+++ b/src/schema/rules/files/raw/channels.yaml
@@ -1,5 +1,6 @@
 ---
 channels:
+  $ref: meta.templates.raw.task
   suffixes:
     - channels
   extensions:
@@ -9,11 +10,6 @@ channels:
     - eeg
     - ieeg
     - nirs
-  entities:
-    $ref: meta.templates.raw.base.entities
-    task: required
-    acquisition: optional
-    run: optional
 
 # MEG has an additional entity available
 channels__meg:
@@ -66,10 +62,8 @@ electrodes:
     - eeg
     - ieeg
   entities:
-    $ref: meta.templates.raw.base.entities
+    $ref: meta.templates.raw.recording.entities
     task: optional
-    acquisition: optional
-    run: optional
     space: optional
 
 # MEG has an additional entity available
