--- a/src/schema/rules/files/raw/task.yaml
+++ b/src/schema/rules/files/raw/task.yaml
@@ -12,10 +12,7 @@ timeseries:
     - ieeg
     - nirs
   entities:
-    $ref: meta.templates.raw.base.entities
-    task: required
-    acquisition: optional
-    run: optional
+    $ref: meta.templates.raw.task.entities
     recording: optional
 
 timeseries__mri_no_task:
@@ -29,9 +26,7 @@ timeseries__mri_no_task:
     - dwi
     - perf
   entities:
-    $ref: meta.templates.raw.base.entities
-    acquisition: optional
-    run: optional
+    $ref: meta.templates.raw.recording.entities
     reconstruction: optional
     direction: optional
     recording: optional
@@ -44,12 +39,11 @@ timeseries__anat:
   datatypes:
     - anat
   entities:
-    $ref: rules.files.raw.task.timeseries.entities
-    ceagent: optional
-    reconstruction: optional
+    $ref:
+      - rules.files.raw.task.timeseries.entities
+      - meta.templates.raw.mri.entities
     echo: optional
     part: optional
-    chunk: optional
     modality: optional
 
 timeseries__func:
@@ -83,10 +77,8 @@ timeseries__pet:
   datatypes:
     - pet
   entities:
-    # Most timeseries allow acquisition, PET doesn't
-    $ref: meta.templates.raw.base.entities
-    task: required
+    $ref: rules.files.raw.task.timeseries.entities
     tracer: optional
     reconstruction: optional
-    run: optional
-    recording: optional
+    # Most timeseries allow acquisition, PET doesn't
+    acquisition: null
