ENH: add petref suffix to schema

--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -767,6 +767,13 @@ pet:
     (or 3D, if only one volume was acquired) NIfTI files with the `_pet` suffix.
     Volumes MUST be stored in chronological order
     (the order they were acquired in).
+petref:
+  value: petref
+  display_name: PET reference acquisition
+  description: |
+    A PET acquisition collected to serve as a concentration reference for absolute quantification
+    or as a calibration reference for preprocessing (for example, motion correction).
+    This acquisition is typically a static PET scan of a phantom with known radioactivity concentration.
 phase:
   value: phase
   display_name: Phase image
